language/move-lang/tests/move_check/expansion/native_main.exp
error: 

   ┌── tests/move_check/expansion/native_main.move:1:1 ───
   │
 1 │ native main();
   │ ^^^^^^ Unrecognized Token: native
   ·
 1 │ native main();
   │ ------ Expected:  "module", "public", "use", r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

